# scaner

./: .gitignore  .secret-scaner.toml  .secrets.baseline.json  README.md  pyproject.toml  result.sarif  sample.py
src/secret_scanner/: __init__.py  cli.py  exit_codes.py
src/secret_scanner/baseline/: __init__.py  fingerprint.py  store.py
src/secret_scanner/collectors/: __init__.py  base.py  filesystem.py  git_diff.py  git_staged.py
src/secret_scanner/config/: __init__.py  defaults.py  loader.py  models.py
src/secret_scanner/detectors/: __init__.py  base.py  regex_detector.py  registry.py
src/secret_scanner/detectors/builtins/: generic_assignment.py  jwt.py  private_key.py  uri_credentials.py
src/secret_scanner/engine/: __init__.py  factory.py  scanner.py  severity.py
src/secret_scanner/filters/: __init__.py  base.py  baseline_filter.py  context_filter.py  dummy_value_filter.py  inline_ignore_filter.py  path_filter.py  registry.py
src/secret_scanner/models/: __init__.py  enums.py  finding.py  scan_result.py  source.py
src/secret_scanner/reporters/: __init__.py  base.py  json_report.py  sarif.py  text.py
src/secret_scanner/utils/: __init__.py  git.py  paths.py  strings.py
testdata/: app.py  config.py  token.py
tests/: test_baseline.py  test_detectors_and_reporters.py  test_git_collectors.py  test_smoke.py
